2010-02-16  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/ContentControlTest.cs: This test
	  passes now.

2010-02-16  Sebastien Pouliot  <sebastien@ximian.com>

	* System.Net/WebClientTest.cs: Uncomment assert

2010-02-15  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Data/BindingTest.cs: Add an ignore to a test
	  which might cause moonunit to blow up until it's fixed.

2010-02-15  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Data/BindingTest.cs: Add some tests to see
	  what happens if we reuse a TemplateBinding and also if we
	  two-way bind to a property of type 'BindingExpressionBase'.

2010-02-13  Sebastien Pouliot  <sebastien@ximian.com>

	* System.Windows/UIElementTest.cs: Allow reusing ConcreteUIElement
	type in other tests.
	* System.Windows.Media.Imaging/WriteableBitmapTest.cs: New. Basic
	tests for most API.

2010-02-12  Alan McGovern  <amcgovern@novell.com>

	* System.Windows/FrameworkElementTest.cs: Update some more
	  tests to SL3 behaviour

2010-02-12  Alan McGovern  <amcgovern@novell.com>

	* System.Windows/FrameworkElementTest.cs: Add some tests which
	  show that FE.DataContext should not register names of
	  elements.

2010-02-12  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/ItemContainerGeneratorTest_Panel.cs:
	  Add some more tests for the IsNewlyRealized parameter in
	  ItemContainerGenerator.Generate.

2010-02-12  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/ItemContainerGeneratorTest_Panel.cs:
	  Fix a few bugs in ItemContainerGenerator and add test cases
	  for the fixes. This resolves most of the big bugs we have
	  with VirtualizingPanel and fixes the non-fullscreen
	  recommendations page in Olympics.

2010-02-11  Sebastien Pouliot  <sebastien@ximian.com>

	* System.Net/WebClientTest.cs: Add test case where Content-Encoding
	is 'gzip' - i.e. Content-Length represent the compressed, not the
	final, length of the data.
