@@ -160,6 +160,7 @@
     <Compile Include="System.Windows.Automation.Peers\CalendarDayButtonAutomationPeerTest.cs" />
     <Compile Include="System.Windows.Automation.Peers\CheckBoxAutomationPeerTest.cs" />
     <Compile Include="System.Windows.Automation.Peers\ComboBoxAutomationPeerTest.cs" />
+    <Compile Include="System.Windows.Automation.Peers\DataGridRowsPresenterAutomationPeerTest.cs" />
     <Compile Include="System.Windows.Automation.Peers\MultiScaleImageAutomationPeerTest.cs" />
     <Compile Include="System.Windows.Automation.Peers\PasswordBoxAutomationPeerTest.cs" />
     <Compile Include="System.Windows.Automation.Peers\FrameworkElementAutomationPeerTest.cs" />
